| Bug #28780 | report_host is not available through SELECT @@report_host | ||
|---|---|---|---|
| Submitted: | 30 May 2007 16:36 | Modified: | 17 Apr 2008 19:33 |
| Reporter: | Jan Kneschke | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 5.1.17 | OS: | Any |
| Assigned to: | Andrei Elkin | Target Version: | 5.1+ |
| Triage: | D2 (Serious) | ||
[30 May 2007 16:36]
Jan Kneschke
[30 May 2007 16:39]
Mark Leith
Verified as described
[28 Feb 2008 10:19]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/43131 ChangeSet@1.2551, 2008-02-28 12:16:54+02:00, aelkin@mysql1000.(none) +5 -0 Bug #28780 report_host is not available through SELECT @@report_host There was no way to see if report-{host,port,user,password} were set up. Fixed with introducing global variables. Variables are made read-only because of a possible need to change them most probably require the slave server restart. Todo: transform the startup options to be CHANGE master parameters - i.e to deprecate `report-' options, and to change the new vars to be updatable at time of CHANGE master executes with new values.
[4 Mar 2008 9:31]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/43358 ChangeSet@1.2551, 2008-03-04 11:29:50+02:00, aelkin@mysql1000.(none) +4 -0 Bug #28780 report_host is not available through SELECT @@report_host There was no way to see if report-{host,port,user,password} were set up. Fixed with introducing new global variables. The variables are made read-only because of a possible need to change them most probably require the slave server restart. Todo: transform the startup options to be CHANGE master parameters - i.e to deprecate `report-' options, and to change the new vars to be updatable at time of CHANGE master executes with new values.
[4 Mar 2008 18:50]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/43418 ChangeSet@1.2551, 2008-03-04 20:48:51+02:00, aelkin@mysql1000.(none) +4 -0 Bug #28780 report_host is not available through SELECT @@report_host There was no way to see if report-{host,port,user,password} were set up. Fixed with introducing new global variables. The variables are made read-only because of a possible need to change them most probably require the slave server restart. Todo: transform the startup options to be CHANGE master parameters - i.e to deprecate `report-' options, and to change the new vars to be updatable at time of CHANGE master executes with new values.
[5 Mar 2008 8:06]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/43445 ChangeSet@1.2551, 2008-03-05 10:04:51+02:00, aelkin@mysql1000.(none) +4 -0 Bug #28780 report_host is not available through SELECT @@report_host There was no way to see if report-{host,port,user,password} were set up. Fixed with introducing new global variables. The variables are made read-only because of a possible need to change them most probably require the slave server restart. Todo: transform the startup options to be CHANGE master parameters - i.e to deprecate `report-' options, and to change the new vars to be updatable at time of CHANGE master executes with new values.
[5 Mar 2008 10:25]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/43451 ChangeSet@1.2551, 2008-03-05 12:23:44+02:00, aelkin@mysql1000.(none) +4 -0 Bug #28780 report_host is not available through SELECT @@report_host There was no way to see if report-{host,port,user,password} were set up. Fixed with introducing new global variables. The variables are made read-only because of a possible need to change them most probably require the slave server restart. Todo: transform the startup options to be CHANGE master parameters - i.e to deprecate `report-' options, and to change the new vars to be updatable at time of CHANGE master executes with new values.
[5 Mar 2008 10:27]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/43452 ChangeSet@1.2551, 2008-03-05 12:25:55+02:00, aelkin@mysql1000.(none) +4 -0 Bug #28780 report_host is not available through SELECT @@report_host There was no way to see if report-{host,port,user,password} were set up. Fixed with introducing new global variables. The variables are made read-only because of a possible need to change them most probably require the slave server restart. Todo: transform the startup options to be CHANGE master parameters - i.e to deprecate `report-' options, and to change the new vars to be updatable at time of CHANGE master executes with new values.
[7 Mar 2008 12:42]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/43580 ChangeSet@1.2561, 2008-03-07 14:39:37+02:00, aelkin@mysql1000.(none) +3 -0 Bug #28780 report_host is not available through SELECT @@report_host merging and post-make-test changes.
[7 Mar 2008 12:44]
Andrei Elkin
Pushed to 5.1-rpl.
[25 Mar 2008 11:23]
Bugs System
Pushed into 5.1.24-rc
[26 Mar 2008 19:01]
Bugs System
Pushed into 6.0.5-alpha
[30 Mar 2008 9:26]
Jon Stephens
Fix also appears in 5.1.23-ndb-6.3.11.
[17 Apr 2008 19:33]
Paul DuBois
Noted in 5.1.24, 6.0.5 changelogs. The new read-only global system variables report_host, report_password, report_port, and report_user system variables provide runtime access to the values of the corresponding --report-host, --report-password, --report-port, and --report-user options.
